fix(project): #1655 fixed the wrapping issue in project list

--- a/web/src/app/shared/components/projects-list/projects-list.component.scss
+++ b/web/src/app/shared/components/projects-list/projects-list.component.scss
@@ -24,7 +24,7 @@
       cursor: pointer;
     }
 
-    &__url {
+    &__item {
       max-width: 20vw;
 
       &__content {
